--- a/app/src/main/res/menu/activity_sketch_pad_drawer.xml
+++ b/app/src/main/res/menu/activity_sketch_pad_drawer.xml
@@ -26,7 +26,7 @@
     <item
       android:id="@+id/nav_manage"
       android:icon="@drawable/ic_settings_black_48dp"
-      android:title="Tools"/>
+      android:title="calibration"/>
   </group>
 
   <!--<item android:title="Communicate">-->
