--- a/app/src/main/res/layout/array_adaptor.xml
+++ b/app/src/main/res/layout/array_adaptor.xml
@@ -10,24 +10,24 @@
     android:id="@+id/TextName"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="16dp"
+    android:paddingBottom="5dp"
     android:paddingEnd="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingStart="10dp"
     android:paddingTop="15dp"
-    android:textSize="23sp"
+    android:textSize="20sp"
     android:textColor="@android:color/black"/>
   <TextView
     android:id="@+id/TextTips"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="16dp"
+    android:paddingBottom="10dp"
     android:paddingEnd="10dp"
-    android:paddingLeft="10dp"
+    android:paddingLeft="15dp"
     android:paddingRight="10dp"
-    android:paddingStart="10dp"
-    android:paddingTop="15dp"
-    android:textSize="23sp"
-    android:textColor="@android:color/black"/>
+    android:paddingStart="15dp"
+    android:paddingTop="5dp"
+    android:textSize="15sp"
+    android:textColor="@android:color/darker_gray"/>
 </LinearLayout>
